--- a/index.html
+++ b/index.html
@@ -30,27 +30,43 @@
         <img src="img/header-img.jpg" alt="header image" class="header-box-img"/>
     </header>
     <main class="showcase">
-        <p>Some random information.</p>
-        <div>Figure 1</div>
-        <div>Figure 2</div>
-        <div>Figure 3</div>
-        <div>Figure 4</div>
+        <h2>Some random information.</h2>
+        <div class="showcase-box">
+            <div class="showcase-item">
+                <img class="showcase-img" src="img/showcase-img.jpg" alt="showcase image"/>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="showcase-item">
+                <img class="showcase-img" src="img/showcase-img.jpg" alt="showcase image"/>
+                <p>his is some subtext under an illustration or image</p>
+            </div>
+            <div class="showcase-item">
+                <img class="showcase-img" src="img/showcase-img.jpg" alt="showcase image"/>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="showcase-item">
+                <img class="showcase-img" src="img/showcase-img.jpg" alt="showcase image"/>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </main>
     <section class="quote">
-        <q>
-            This is an inspiring quote, or a testimonial from a customer. Maybe it´s just filling up space, or maybe
-            people will actually read it. Who knows? All I know is that it looks nice.
-        </q>
-        <p>-Thor, God of Thunder</p>
+        <div class="quote-box">
+            <p>
+                This is an inspiring quote, or a testimonial from a customer. Maybe it´s just filling up space, or maybe
+                people will actually read it. Who knows? All I know is that it looks nice.
+            </p>
+            <p class="quote-author">-Thor, God of Thunder</p>
+        </div>
     </section>
-    <section class="call-to-action">
-        <div>
+    <section>
+        <div class="call-to-action">
             <p>Call to action! It´s time</p>
             <p>Sign up for our product by clicking that button right over there!</p>
         </div>
         <button>Sign up</button>
     </section>
-    <footer class="footer">Footer</footer>
+    <footer class="footer">Copyright &#169; The Odin Project 2021</footer>
+</div>
 </body>
-</>
 </html>
