Add call to action styles

--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
             <p class="quote-author">-Thor, God of Thunder</p>
         </div>
     </section>
-    <section>
-        <div class="call-to-action">
-            <p>Call to action! It´s time</p>
-            <p>Sign up for our product by clicking that button right over there!</p>
+    <section class="call-to-action">
+        <div class="call-to-action-box">
+            <div>
+                <p><strong>Call to action! It´s time!</strong></p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
         </div>
-        <button>Sign up</button>
     </section>
     <footer class="footer">Copyright &#169; The Odin Project 2021</footer>
 </div>
